--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h3>Circles</h3>
     <div class="circle"></div>
+    <div class="circle"></div>
+    <hr>
+
+    <div></div>
 </body>
 </html>
