Shapes and gradient

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
 
     <h3>Oval</h3>
     <div class="oval"></div>
+    <div class="oval-2"></div>
+    <hr>
+
+
+    <h3>Trapzium</h3>
+    <div class="trapizum"></div>
 </body>
 </html>
