--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
 
     <h3>Oval</h3>
     <div class="oval"></div>
+    <!-- <div class="oval-2"></div> -->
+    <hr>
+    
+    
+    <h3>Trapzium</h3>
+    <div class="trapizum"></div>
     <div class="oval-2"></div>
     <hr>
 
 
-    <h3>Trapzium</h3>
-    <div class="trapizum"></div>
+    <h3>Shadow</h3>
+    <div class="shadow"></div>
 </body>
 </html>
